@@ -1,3 +1,4 @@
 # 0.11.0
 
  * Created `Export-RunResultXml` function for exporting test results to an NUNit-compatible XML file.
+ * `blade.ps1` saves test results to NUNit-compatible XML files. Use the `Name` and `XmlLogPath` parameters.
